--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_KEY =9a2927c97399413fb1ea510aa3b8f307 
+# REACT_APP_API_KEY1 =9a2927c97399413fb1ea510aa3b8f307 
+REACT_APP_API_KEY  =96bb134b471e4b81809f48ac774f4c8d 
